# aria-vision-agent

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: main.py
backend/agent/: vision_aria.py
backend/asterisk/: clawtunnel_client.py  client.py  dispatcher.py
backend/notifications/: telegram.py
config/: protocols.yaml  responders.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: IncidentCard.tsx
frontend/src/hooks/: useARIA.ts  useStreamCall.ts
frontend/src/types/: incident.ts
