[project]
name = "aria"
version = "0.1.0"
description = "ARIA — Autonomous Response Intelligence Agent"
requires-python = ">=3.11"

dependencies = [
    # Vision / Detection (direct — no Stream SDK needed)
    "ultralytics>=8.3.0",
    "moondream>=0.0.5",
    "opencv-python>=4.10.0",
    "pillow>=10.4.0",
    "numpy>=1.26.0",

    # LLM — Gemini
    "google-generativeai>=0.8.0",

    # TTS
    "elevenlabs>=1.9.0",

    # Telephony — Clawtunnel REST client (replaced ari-py)
    "aiohttp>=3.10.0",
    "requests>=2.32.0",

    # API / realtime
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",

    # Utilities
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
]

[project.scripts]
aria = "backend.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
